--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "id": "8c3ff17f-dc3f-44d8-b8c5-6e00c44d401c",
    "metadata": {},
    "outputs": [],
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "id": "c45a96d8-98de-47b5-879b-0d749d5aedd6",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
        "i3  3.0  3.1  3.2  3.3"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,13 +481,254 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 12,
    "id": "4f1f4836-4d11-43f7-b05d-893aec1523c1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 인덱스 재설정\n",
     "# df_0.set_index('c0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8fdf7310-ee69-410f-9c8b-f5b5bf7efba5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i0    0.0\n",
+      "i1    1.0\n",
+      "i2    2.0\n",
+      "i3    3.0\n",
+      "Name: c0, dtype: float64\n",
+      "     c1   c2\n",
+      "i0  0.1  0.2\n",
+      "i1  1.1  1.2\n",
+      "i2  2.1  2.2\n",
+      "i3  3.1  3.2\n",
+      "c0    1.0\n",
+      "c1    1.1\n",
+      "c2    1.2\n",
+      "c3    1.3\n",
+      "Name: i1, dtype: float64\n",
+      "c0    2.0\n",
+      "c1    2.1\n",
+      "c2    2.2\n",
+      "c3    2.3\n",
+      "Name: i2, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 열 선택\n",
+    "print(df_0['c0'])  # 'c0' 열 선택\n",
+    "print(df_0[['c1', 'c2']])  # 'c1', 'c2' 열 선택\n",
+    "\n",
+    "# 행 선택\n",
+    "print(df_0.loc['i1'])  # 'i1' 행 선택\n",
+    "print(df_0.iloc[2])  # 인덱스가 2인 행 선택\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7e0c683e-9e77-4b28-aeb3-ec988d3466f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>c0</th>\n",
+       "      <th>c1</th>\n",
+       "      <th>c2</th>\n",
+       "      <th>c3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>i0</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>i1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>3.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>i2</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>2.25</td>\n",
+       "      <td>3.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>i3</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>3.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     c0   c1    c2   c3\n",
+       "i0  0.5  0.5  0.50  0.5\n",
+       "i1  1.0  1.1  1.20  3.4\n",
+       "i2  2.0  2.1  2.25  3.4\n",
+       "i3  3.0  3.1  3.20  3.4"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 특정 셀 값 변경\n",
+    "df_0.at['i2', 'c2'] = 2.25\n",
+    "\n",
+    "# 특정 행 또는 열 값 변경\n",
+    "df_0['c3'] = 3.4  # 'c3' 열의 모든 값 변경\n",
+    "df_0.loc['i0'] = 0.5  # 'i0' 행의 모든 값 변경\n",
+    "\n",
+    "df_0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ba0949ef-e159-46da-8108-212e16d0288e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c0          1.6250\n",
+      "c1          1.7000\n",
+      "c2          1.7875\n",
+      "c3          2.6750\n",
+      "c_1_2sum    3.4875\n",
+      "dtype: float64\n",
+      "3.1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>c0</th>\n",
+       "      <th>c1</th>\n",
+       "      <th>c2</th>\n",
+       "      <th>c3</th>\n",
+       "      <th>c_1_2sum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>i0</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>i1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>1.20</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>2.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>i2</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>2.25</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>4.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>i3</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>6.30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     c0   c1    c2   c3  c_1_2sum\n",
+       "i0  0.5  0.5  0.50  0.5      1.00\n",
+       "i1  1.0  1.1  1.20  3.4      2.30\n",
+       "i2  2.0  2.1  2.25  3.4      4.35\n",
+       "i3  3.0  3.1  3.20  3.4      6.30"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 열 간 연산\n",
+    "df_0['c_1_2sum'] = df_0['c1'] + df_0['c2']\n",
+    "\n",
+    "# 통계량 계산\n",
+    "print(df_0.mean())  # 각 열의 평균값 계산\n",
+    "print(df_0['c1'].max())  # 'c1' 열의 최댓값\n",
+    "\n",
+    "df_0"
    ]
   }
  ],
